Push update: Media queries ex completed (fixed social icon spacing).

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -70,7 +70,7 @@ footer {
 }
 
 p {
-    flex-grow: 8;
+    flex-grow: 1;
     padding: 50px 0;
 
 }
@@ -78,7 +78,7 @@ p {
 #social-media-links {
     display: flex;
     flex-grow: .5;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 @media screen and (max-width:570px) {
